--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
       top: 0;
       left: 0;
     }
+    .phoneViewImage {
+      user-drag: none;
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      outline: 1px solid green;
+    }
   </style>
 </head>
 <body>
