Working RevolutionConf version

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Testing Stuffs</a>
+        <a class="navbar-brand" href="#">Crossy Roadbot 🐔</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
